2/3/11 encapsulation of global properties
2/3/11 change request: move view radio buttons to bottom of play area
2/3/11 change request: delete smiley face from 1st tab
2/3/11 change request: set default view to "None"
2/3/11 change request: hide zero-height bar in bar charts view
2/3/11 change request: add atom icons to bar charts view
2/3/11 change request: increase size of atom symbol in bar charts view
# 0.00.02 (48563) Feb 2, 2011
2/2/11 dev version for team discussion, all features implemented in 1st tab
2/2/11 replace atom and molecule image files with Piccolo code
2/2/11 make Reset All in any tab perform a reset of global settings (eg, Options->Show molecules)
2/2/11 move ResetAll button to upper left to free up vertical space (will be needed in Game)
2/2/11 enable Reset All confirmation, for discussion
2/2/11 center justification of balance scales
2/2/11 share one instance of HorizontalAligner
2/2/11 center justification of bar charts
2/2/11 revert to HorizontalAligner for aligning equation and molecules 
2/2/11 horizontally align equation terms and molecule columns
2/2/11 adjust box size and separation
2/2/11 abandon HorizontalAligner approach to alignment of multiple representations
2/2/11 capitalize view choices
2/2/11 fix: order of bars should be the same for reactants and products
2/2/11 move atom counting to Equation model
2/2/11 change request: make equality sign in bar charts the same color as equation arrows
2/2/11 change request: make '+' in equations black
2/2/11 change request: do not reset coefficients when switching equations
2/2/11 change request: add "none" as a choice of visual representations
2/2/11 fix: set background for control panels in play area
2/1/11 doc
2/1/11 remove unused code
# 0.00.01 (48489) Feb 1, 2011
2/1/11 dev version for discussion with KL, no horizontal alignment
2/1/11 fix layout of balance scales so that fulcrums remain in fixed locations
2/1/11 wire up Options->Show molecules
2/1/11 add skeleton for Options menu