@@ -15,7 +15,7 @@ public class BCEColors {
     private BCEColors() {}
 
     public static final Color CANVAS_BACKGROUND = new Color( 210, 210, 255 );
-    public static final Color BEFORE_AFTER_BOX_COLOR = new Color( 46, 107, 178 );
+    public static final Color BOX_COLOR = new Color( 46, 107, 178 );
 
     // atom colors
     public static final Color C = new Color( 178, 178, 178 );
