@@ -22,7 +22,7 @@ public class BCEGlobalProperties implements Resettable {
     // developer controls
     private final boolean isDev;
     private final Property<Color> canvasColorProperty = new Property<Color>( BCEColors.CANVAS_BACKGROUND );
-    private final Property<Color> boxColorProperty = new Property<Color>( BCEColors.CANVAS_BACKGROUND );
+    private final Property<Color> boxColorProperty = new Property<Color>( BCEColors.BOX_COLOR );
 
     public BCEGlobalProperties( Frame frame, boolean isDev ) {
         this.frame = frame;
