@@ -6,6 +6,7 @@ import javax.swing.JCheckBoxMenuItem;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import edu.colorado.phet.balancingchemicalequations.BCEGlobalProperties;
 import edu.colorado.phet.balancingchemicalequations.BCEStrings;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
@@ -18,9 +19,10 @@ import edu.colorado.phet.common.phetcommon.view.menu.OptionsMenu;
  */
 public class BCEOptionMenu extends OptionsMenu {
 
-    public BCEOptionMenu( final Property<Boolean> moleculesVisibleProperty ) {
+    public BCEOptionMenu( BCEGlobalProperties globalProperties ) {
 
         // Show molecules (check box)
+        final Property<Boolean> moleculesVisibleProperty = globalProperties.getMoleculesVisibleProperty();
         final JCheckBoxMenuItem showMoleculesMenuItem = new JCheckBoxMenuItem( BCEStrings.SHOW_MOLECULES, moleculesVisibleProperty.getValue() );
         add( showMoleculesMenuItem );
         showMoleculesMenuItem.addChangeListener( new ChangeListener() {
@@ -28,7 +30,6 @@ public class BCEOptionMenu extends OptionsMenu {
                 moleculesVisibleProperty.setValue( showMoleculesMenuItem.isSelected() );
             }
         } );
-
         moleculesVisibleProperty.addObserver( new SimpleObserver() {
             public void update() {
                 showMoleculesMenuItem.setSelected( moleculesVisibleProperty.getValue() );
